pin rustls, rustls-native-certs, and tokio-rustls to git
all three pinned crates are themselves pinned to a git rev of rustls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ log = "0.4.4"
 ct-logs = { version = "^0.7", optional = true }
 futures-util = "0.3.1"
 hyper = { version = "0.13.0", default-features = false }
-rustls = "0.18"
-rustls-native-certs = { version = "0.4.0", optional = true }
+rustls = { git = "https://github.com/ctz/rustls", rev = "fee894f7e030" }
+rustls-native-certs = { git = "https://github.com/kwantam/rustls-native-certs", rev = "52fc75ad4430", optional = true }
 tokio = "0.2.4"
-tokio-rustls = "0.14.0"
+tokio-rustls = { git = "https://github.com/kwantam/tokio-rustls", rev = "684cc546e754" }
 webpki = "0.21.0"
 webpki-roots = { version = "0.20", optional = true }
 
